# evogine

./: .gitignore  AGENT_GUIDE.md  LICENSE  PRINCIPLES.md  README.md  deap_comparison.md  evogine.py  features.md  genetic_engine.py  ideas.md  pyproject.toml
.github/workflows/: publish.yml  test.yml
.hypothesis/constants/: 0e3c33e0eb0447d7  28ac3dc47089f03d  2a400fa1a5675d0d
evogine/: __init__.py  _utils.py  analysis.py  cmaes.py  de.py  ga.py  genes.py  island.py  mapelites.py  multi_objective.py  operators.py
evogine/benchmarks/: __init__.py  __main__.py  engineering.py  functions.py  multi_objective.py  problems.py  runner.py
examples/: benchmarks.py  cmaes.md  de_optimizer.md  genetic_algorithm.md  island_model.md  landscape_analysis.md  live_plot.py  map_elites.md  multi_objective.md  stock_fitness_functions.md  stock_strategy_optimization.md
tests/: test_benchmarks.py  test_cmaes.py  test_de.py  test_engine.py  test_island_model.py  test_mapelites.py  test_multi_objective.py  test_multiprocessing.py  test_new_features.py  test_property.py  test_steering.py
