[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "evogine"
version = "0.1.0"
description = "A clean, controllable evolutionary optimization library — genetic algorithms, CMA-ES, island models, and Pareto optimization with named genes, strict bounds, and structured logging."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov",
    "hypothesis>=6.0",
    "numpy>=1.24",
]
cmaes = [
    "numpy>=1.24",
]

[project.urls]
Homepage   = "https://github.com/yourname/evogine"
Repository = "https://github.com/yourname/evogine"
Issues     = "https://github.com/yourname/evogine/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["evogine*"]
