[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "evogine"
version = "0.1.0"
description = "A clean, controllable evolutionary optimization library — genetic algorithms, CMA-ES, island models, and Pareto optimization with named genes, strict bounds, and structured logging."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = []
keywords = ["genetic algorithm", "optimization", "evolutionary", "CMA-ES", "Pareto", "NSGA-II"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development :: Libraries",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov",
    "hypothesis>=6.0",
    "numpy>=1.24",
]
cmaes = [
    "numpy>=1.24",
]

[project.urls]
Homepage   = "https://github.com/yourname/evogine"
Repository = "https://github.com/yourname/evogine"
Issues     = "https://github.com/yourname/evogine/issues"

[tool.setuptools]
py-modules = ["evogine"]
