[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "evogine"
version = "0.1.0"
description = "Genetic algorithm and evolutionary optimization engine with built-in diagnostics and AI-agent steering — GA, CMA-ES, differential evolution, island models, NSGA-II/III, and MAP-Elites."
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Sami Kuisma", email = "sami.kuisma@gmail.com" }]
requires-python = ">=3.10"
dependencies = []
keywords = [
    "genetic algorithm",
    "evolutionary optimization",
    "optimization",
    "CMA-ES",
    "differential evolution",
    "NSGA-II",
    "Pareto",
    "island model",
    "MAP-Elites",
    "multi-objective",
    "hyperparameter tuning",
    "AI agent",
    "parameter search",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development :: Libraries",
    "Typing :: Typed",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov",
    "hypothesis>=6.0",
    "numpy>=1.24",
]
cmaes = [
    "numpy>=1.24",
]

[project.urls]
Homepage   = "https://github.com/sku10/evogine"
Repository = "https://github.com/sku10/evogine"
Issues     = "https://github.com/sku10/evogine/issues"

[tool.setuptools]
packages = ["evogine"]
